crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__access_field.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: user.name
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Access {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Var(
                "user",
            ),
        },
        field: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 10,
                },
            },
            value: "name",
        },
    },
}
