crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__access_newline_continuation.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: "builder\n    .first()\n    .second\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 12,
        },
    },
    value: Access {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 2,
                    column: 13,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 2,
                            column: 11,
                        },
                    },
                    value: Access {
                        record: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 8,
                                },
                            },
                            value: Var(
                                "builder",
                            ),
                        },
                        field: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 6,
                                },
                                end: Position {
                                    line: 2,
                                    column: 11,
                                },
                            },
                            value: "first",
                        },
                    },
                },
                arguments: [],
            },
        },
        field: Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 6,
                },
                end: Position {
                    line: 3,
                    column: 12,
                },
            },
            value: "second",
        },
    },
}
