crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__await_chain.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: fetch(url).await.json().await
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    value: Await(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 24,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 22,
                        },
                    },
                    value: Access {
                        record: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 17,
                                },
                            },
                            value: Await(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 1,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 11,
                                        },
                                    },
                                    value: Call {
                                        function: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 1,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 6,
                                                },
                                            },
                                            value: Var(
                                                "fetch",
                                            ),
                                        },
                                        arguments: [
                                            Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 1,
                                                        column: 7,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 10,
                                                    },
                                                },
                                                value: Var(
                                                    "url",
                                                ),
                                            },
                                        ],
                                    },
                                },
                            ),
                        },
                        field: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: "json",
                        },
                    },
                },
                arguments: [],
            },
        },
    ),
}
