crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__await_simple.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: task.await
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: Await(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 5,
                },
            },
            value: Var(
                "task",
            ),
        },
    ),
}
