crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__await_then_try.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: load(id).await?
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Try(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: Await(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 1,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Call {
                        function: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 5,
                                },
                            },
                            value: Var(
                                "load",
                            ),
                        },
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 8,
                                    },
                                },
                                value: Var(
                                    "id",
                                ),
                            },
                        ],
                    },
                },
            ),
        },
    ),
}
