crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__call_no_args.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: f()
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "f",
            ),
        },
        arguments: [],
    },
}
