crates/alder-parse/src/expression/snapshots/alder_parse__expression__postfix__tests__call_on_lambda_result.snap
---
source: crates/alder-parse/src/expression/postfix.rs
description: (x -> x + 1)(2)
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 13,
                },
            },
            value: Lambda(
                Lambda {
                    params: [
                        Param {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 2,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 3,
                                    },
                                },
                                value: Var(
                                    "x",
                                ),
                            },
                            annotation: None,
                        },
                    ],
                    ret: None,
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 7,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: BinOps {
                            operands: [
                                BinOpOperand {
                                    expr: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 7,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 8,
                                            },
                                        },
                                        value: Var(
                                            "x",
                                        ),
                                    },
                                    op: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                        },
                                        value: Add,
                                    },
                                },
                            ],
                            last: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                },
                                value: Number(
                                    NumberLit {
                                        value: 1.0,
                                        text: "1",
                                    },
                                ),
                            },
                        },
                    },
                },
            ),
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Number(
                    NumberLit {
                        value: 2.0,
                        text: "2",
                    },
                ),
            },
        ],
    },
}
